# campus-rater

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
app/: main.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  authentication.py  institution.py  review.py
app/config/: environment.py
app/db/: database.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 119aa2f74e1a_add_private_field_to_review_table.py  b0cdf7ca815e_populate_institution_table_with_seed_.py  eca3c98a48c5_create_user_review_and_institution_.py
app/db/repositories/: institution.py  review.py  user.py
app/schemas/: authentication.py  institution.py  review.py  user.py
app/services/: authentication.py  user.py
backend/: .gitignore  Dockerfile  Dockerfile.database  README.md  docker-compose.yml  load-extensions-db.sh  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: user.py
backend/app/config/: environment.py
backend/app/db/: database.py  models.py
backend/app/db/migrations/: env.py  migrate.py
backend/app/db/migrations/versions/: eca3c98a48c5_create_user_review_and_institution_.py
backend/app/db/migrations/versions/assets/: institution_seed.json
backend/app/db/repositories/: institution.py  review.py
backend/app/schemas/: api.py  institution.py  review.py
backend/app/services/: authentication.py  review.py
frontend/: .eslintrc  .prettierrc.js  Dockerfile  README.md  index.html  lint-staged.config.js  package.json  pnpm-lock.yaml  postcss.config.js  transmart.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx  router.tsx
frontend/src/components/create-review-dialog/: index.tsx
frontend/src/config/: env.schema.ts  server.ts
frontend/src/domain/: auth.ts  institutions.ts  reviews.ts
frontend/src/hooks/: use-create-review.ts  use-get-institutions.ts  use-get-user-reviews.ts  use-localstorage-state.ts  use-login.ts  use-sign-up.ts
frontend/src/i18n/: config.ts
frontend/src/pages/home/: index.tsx
frontend/src/providers/: auth.tsx
(+8 files in other folders)
