[tool.poetry]
name = "campus-rater"
version = "0.1.0"
description = ""
authors = ["Vinícius Cristofari Barbosa <viniciusnypbarbosa@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
